docs: 更新 README 和首页，添加更多图表入口

--- a/index.html
+++ b/index.html
@@ -447,6 +447,9 @@
             <div class="section-header">
                 <span class="eyebrow">Library</span>
                 <h2 class="section-title">基础组件库</h2>
+                <p style="text-align: center; color: var(--text-sub); margin-top: 16px; font-size: 15px;">
+                    26+ 种专业图表类型，统一设计规范，开箱即用
+                </p>
             </div>
             <div class="bento-grid">
                 <a href="01-column/index.html" class="bento-item bento-4">
@@ -454,20 +457,35 @@
                     <p class="bento-desc">极致比例，细腻圆角设计。</p>
                     <div class="bento-visual" style="font-size: 80px;">📊</div>
                 </a>
-                <a href="04-line/index.html" class="bento-item bento-8">
+                <a href="04-line/index.html" class="bento-item bento-4">
                     <h3 class="bento-title">折线图</h3>
                     <p class="bento-desc">平滑的贝塞尔曲线与灵动的交互反馈。</p>
                     <div class="bento-visual" style="font-size: 80px;">📈</div>
                 </a>
-                <a href="06-pie/index.html" class="bento-item bento-6">
-                    <h3 class="bento-title">占比分析</h3>
+                <a href="06-pie/index.html" class="bento-item bento-4">
+                    <h3 class="bento-title">饼图</h3>
                     <p class="bento-desc">支持嵌套、多级联动与语义化标注。</p>
                     <div class="bento-visual" style="font-size: 80px;">🥧</div>
                 </a>
-                <a href="17-map/index.html" class="bento-item bento-6">
+                <a href="20-ring/index.html" class="bento-item bento-4">
+                    <h3 class="bento-title">环图</h3>
+                    <p class="bento-desc">中心可展示汇总数据或关键指标。</p>
+                    <div class="bento-visual" style="font-size: 80px;">🍩</div>
+                </a>
+                <a href="09-bubble/index.html" class="bento-item bento-4">
+                    <h3 class="bento-title">气泡图</h3>
+                    <p class="bento-desc">三维分析：价格 × 销量 × 利润。</p>
+                    <div class="bento-visual" style="font-size: 80px;">🫧</div>
+                </a>
+                <a href="17-map/index.html" class="bento-item bento-4">
                     <h3 class="bento-title">地理空间</h3>
                     <p class="bento-desc">基于 L7 的专业级地图可视化引擎。</p>
                     <div class="bento-visual" style="font-size: 80px;">🗺️</div>
+                </a>
+            </div>
+            <div style="text-align: center; margin-top: 40px;">
+                <a href="00-design-system/index.html" style="color: var(--apple-blue); text-decoration: none; font-size: 15px; font-weight: 500;">
+                    查看全部 26+ 图表类型 →
                 </a>
             </div>
         </section>
