--- a/17-map/index.html
+++ b/17-map/index.html
@@ -371,14 +371,14 @@ chart.setOption(option);</pre>
         const loading = document.getElementById('loading');
         
         // 优先使用本地 GeoJSON 文件（避免 CORS 问题）
-        // 如果本地文件不存在，尝试使用支持 CORS 的 CDN
+        // 如果本地文件不存在或格式不正确，尝试使用支持 CORS 的 CDN
         const geoJsonSources = [
             // 方案1: 本地文件（最可靠，无 CORS 问题）
             'china.json',
-            // 方案2: 使用 GitHub Raw（通常支持 CORS）
-            'https://raw.githubusercontent.com/echarts-maps/echarts-china-provinces-js/master/geoJson/100000_full.json',
-            // 方案3: 使用 jsDelivr（通过 GitHub 镜像）
-            'https://cdn.jsdelivr.net/gh/echarts-maps/echarts-china-provinces-js@master/geoJson/100000_full.json'
+            // 方案2: 使用 jsDelivr CDN（通过 npm 包）
+            'https://cdn.jsdelivr.net/npm/echarts@5.4.3/map/json/china.json',
+            // 方案3: 使用 unpkg CDN
+            'https://unpkg.com/echarts@5.4.3/map/json/china.json'
         ];
         
         let chinaGeoJson = null;
