fix: 修复省份数据生成逻辑，确保从 GeoJSON 正确提取

--- a/17-map/index.html
+++ b/17-map/index.html
@@ -560,7 +560,7 @@ chart.setOption(option);</pre>
                         label: { show: true, color: '#fff' },
                         itemStyle: { areaColor: '#0051D4' }
                     },
-                    data: uniqueData
+                    data: data
                 }]
             };
             
