--- a/17-map/index.html
+++ b/17-map/index.html
@@ -449,12 +449,13 @@ chart.setOption(option);</pre>
         } catch (loadError) {
             // 如果加载失败，直接抛出错误，不继续执行
             console.error('地图数据加载失败:', loadError);
+            // 重新抛出错误，让外层的 catch 处理
             throw loadError;
         }
         
-        // 确保 chinaGeoJson 已定义（双重检查）
-        if (!chinaGeoJson) {
-            throw new Error('无法加载地图数据：chinaGeoJson 未定义');
+        // 双重检查：确保 chinaGeoJson 已定义（防御性编程）
+        if (!chinaGeoJson || !chinaGeoJson.features) {
+            throw new Error('无法加载地图数据：chinaGeoJson 未定义或格式不正确');
         }
         
         try {
